--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ajbell-technical-test</string>
+    <string name="app_name">a-technical-test</string>
 </resources>
